--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,8 @@
         answer it. </p>
       </div>
 
+<iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col4+from+1eHOxQnl4cMnGh2CZ0gc8uta91VjKLH6AL_RrqkRH&amp;viz=MAP&amp;h=false&amp;lat=37.603711493882734&amp;lng=-122.2805417916976&amp;t=1&amp;z=13&amp;l=col4&amp;y=2&amp;tmplt=2&amp;hml=TWO_COL_LAT_LNG"></iframe>
 
-<iframe width="500" height="300" scrolling="no" frameborder="no"
-	src="https://www.google.com/fusiontables/embedviz?q=select+col16%3E%3E0+from+1ymz3EtGdi4qKGMl5AxEFXtTlgk3tKi8iCpjTzvM&amp;viz=MAP&amp;h=false&amp;lat=38.071424981566125&amp;lng=-85.15232666015623&amp;t=1&amp;z=9&amp;l=col16%3E%3E0&amp;y=3&amp;tmplt=3&amp;hml=TWO_COL_LAT_LNG"></iframe>
 
       </div> <!-- /page-header -->
     </div> <!-- /container -->
