--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
       <script type="text/javascript"
     src="https://maps.google.com/maps/api/js?sensor=false">
   </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMQlqwSHnQI9AxBlW-n9_xOhasOYRaGwY&callback=initMap"
+  type="text/javascript"></script>
   <script type="text/javascript">
     var map;
     var layer_0;
