--- a/templates/index.html
+++ b/templates/index.html
@@ -85,10 +85,8 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Data Pipeline Project Fusion Byte 1</h1>
-        <p>This is the Fusion Byte of the Data Pipeline class. This
-        page should explain what question you want to answer and use
-        the visualization tools provided by Google Fusion Table to
-        answer it. </p>
+        <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: how does 
+      </p>
       </div>
 
 
@@ -96,6 +94,12 @@
         
         
         <div id="map-canvas"></div>
+        <ul class="legend">
+    <li><span class="superawesome"></span> m</li>
+    <li><span class="awesome"></span> d</li>
+    <li><span class="kindaawesome"></span> z</li>
+    <li><span class="notawesome"></span> z</li>
+</ul>
         
         
 
