--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,11 @@
     <!-- Bootstrap theme -->
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/theme.css" rel="stylesheet">
+    
     <style>
     #map-canvas { width :600px; height:400px; }
     .layer-wizard-search-label { font-family: sans-serif };
+    #googft-legend{background-color:#fff;border:1px solid #000;font-family:Arial,sans-serif;font-size:12px;margin:5px;padding:10px 10px 8px}#googft-legend p{font-weight:bold;margin-top:0}#googft-legend div{margin-bottom:5px}.googft-legend-swatch{border:1px solid;float:left;height:12px;margin-right:8px;width:20px}.googft-legend-range{margin-left:0}.googft-dot-icon{margin-right:8px}.googft-paddle-icon{height:24px;left:-8px;margin-right:-8px;position:relative;vertical-align:middle;width:24px}.googft-legend-source{margin-bottom:0;margin-top:8px}.googft-legend-source a{color:#666;font-size:11px}
     </style>
       <script type="text/javascript"
     src="https://maps.google.com/maps/api/js?sensor=false">
@@ -35,6 +36,10 @@
         zoom: 3,
         mapTypeId: google.maps.MapTypeId.ROADMAP
       });
+      
+      map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(document.getElementById('googft-legend-open'));
+    map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(document.getElementById('googft-legend'));
+      
       layer_0 = new google.maps.FusionTablesLayer({
         query: {
           select: "col0>>1",
@@ -53,6 +58,21 @@
         styleId: 2,
         templateId: 3
       });
+      
+      var legend = document.getElementById('googft-legend');
+      var legendOpenButton = document.getElementById('googft-legend-open');
+      var legendCloseButton = document.getElementById('googft-legend-close');
+      legend.style.display = 'none';
+      legendOpenButton.style.display = 'block';
+      legendCloseButton.style.display = 'block';
+      legendOpenButton.onclick = function() {
+        legend.style.display = 'block';
+        legendOpenButton.style.display = 'none';
+      }
+      legendCloseButton.onclick = function() {
+        legend.style.display = 'none';
+        legendOpenButton.style.display = 'block';
+      }
     }
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
@@ -92,14 +112,30 @@
 
         
         
-        
+      
         <div id="map-canvas"></div>
-        <ul class="legend">
-    <li><span class="superawesome"></span> m</li>
-    <li><span class="awesome"></span> d</li>
-    <li><span class="kindaawesome"></span> z</li>
-    <li><span class="notawesome"></span> z</li>
-</ul>
+        
+        <input id="googft-legend-open" style="display:none" type="button" value="Legend"></input>
+  <div id="googft-legend">
+    <p id="googft-legend-title">Most Dangerous Cities in USA Rank</p>
+    <div>
+      <img class="googft-dot-icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAi0lEQVR42mNgQIAoIF4NxGegdCCSHAMzEC+NijL7v3p1+v8zZ6rAdGCg4X+g+EyYorS0NNv////PxMCxsRYghbEgRQcOHCjGqmjv3kKQor0gRQ8fPmzHquj27WaQottEmxQLshubopAQI5CiEJjj54N8t3FjFth369ZlwHw3jQENgMJpIzSc1iGHEwB8p5qDBbsHtAAAAABJRU5ErkJggg=="/>
+      <span class="googft-legend-range">1 to 26</span>
+    </div>
+    <div>
+      <img class="googft-dot-icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAiElEQVR42mNgQIAoIF4NxGegdCCSHAMzEC81izL7n746/X/VmSowbRho+B8oPhOmKM02zfb/TCzQItYCpDAWpOhA8YFirIoK9xaCFO0FKXrY/rAdq6Lm280gRbeJNikWZDc2RUYhRiBFITDHzwf5LmtjFth3GesyYL6bxoAGQOG0ERpO65DDCQDX7ovT++K9KQAAAABJRU5ErkJggg=="/>
+      <span class="googft-legend-range">26 to 51</span>
+    </div>
+    <div>
+      <img class="googft-dot-icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAi0lEQVR42mNgQIAoIF4NxGegdCCSHAMzEC+NMov6vzp99f8zVWfAdKBh4H+g+EyYorQ027T//2f+x8CxFrEghbEgRQcOFB/Aqmhv4V6Qor0gRQ8ftj/Equh2822QottEmxQLshubohCjEJCiEJjj54N8tzFrI9h36zLWwXw3jQENgMJpIzSc1iGHEwBt95qDejjnKAAAAABJRU5ErkJggg=="/>
+      <span class="googft-legend-range">51 to 76</span>
+    </div>
+    <div>
+      <img class="googft-paddle-icon" src="http://maps.google.com/mapfiles/ms/micons/red-dot.png"/>
+      <span class="googft-legend-range">76 to 101</span>
+    </div>
+    <input id="googft-legend-close" style="display:none" type="button" value="Hide"></input>
+  </div>
         
         
 
