--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Data Pipeline Project Fusion Byte 1</h1>
-        <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: how does 
+        <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: <br> Does proverty rate of each state have a positive relationship with the number of dangerous cities in each state?
       </p>
       </div>
 
