--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,12 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-	<h1>Data Pipeline Project Fusion Byte 1</h1>
+	<h1>Data Pipeline Project - Byte 1</h1>
         <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: <br> Does proverty rate of each state have a positive relationship with the number of dangerous cities in each state?
+      </p>
+      Notice the polygon fill represents the level of poverty rate in each state. (The higher level the poverty rate is, the deeper the color fill is.)<br>
+      The marker points indicates where the top 100 dangerous cities in US. (Click on "legend" button for more information) 
+      <p>
       </p>
       </div>
 
