--- a/templates/index.html
+++ b/templates/index.html
@@ -107,10 +107,14 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Data Pipeline Project - Byte 1</h1>
-        <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: <br> Does proverty rate of each state have a positive relationship with the number of dangerous cities in each state?
+        <p>This is a web-enabled application that use data from Google Fusion Tables to answer a question: <br> Does poverty rate of each state have a positive relationship with the number of dangerous cities in each state?
       </p>
       Notice the polygon fill represents the level of poverty rate in each state. (The higher level the poverty rate is, the deeper the color fill is.)<br>
-      The marker points indicates where the top 100 dangerous cities in US. (Click on "legend" button for more information) 
+      The marker points indicates where the top 100 dangerous cities in US. (Click on "legend" button for more information) <br>
+      As shown in following graph, we can see that majority of states with high poverty rate have more maker icons, which proof that the higher the poverty rate a state has, the more chances that it would have dangerous cities in the state.<br>
+      For instance, Michigan is one of the states that has high poverty rate, therefore it has relatively large number of dangerous cities in it. 
+      
+      
       <p>
       </p>
       </div>
